List all courses

--- a/picker-shortcodes.html
+++ b/picker-shortcodes.html
@@ -314,7 +314,102 @@ button.disabled:hover {
 'use strict';
 
 var items = [
-    // Define your items here
+    {id: 'Mario Kart Stadium'},
+    {id: 'Water Park'},
+    {id: 'Sweet Sweet Canyon'},
+    {id: 'Thwomp Ruins'},
+    {id: 'Mario Circuit'},
+    {id: 'Toad Harbor'},
+    {id: 'Twisted Mansion'},
+    {id: 'Shy Guy Falls'},
+    {id: 'Sunshine Airport'},
+    {id: 'Dolphin Shoals'},
+    {id: 'Electrodrome'},
+    {id: 'Mount Wario'},
+    {id: 'Cloudtop Cruise'},
+    {id: 'Bone-Dry Dunes'},
+    {id: 'Bowser\'s Castle'},
+    {id: 'Rainbow Road'},
+    {id: 'Wii Moo Moo Meadows'},
+    {id: 'GBA Mario Circuit'},
+    {id: 'DS Cheep Cheep Beach'},
+    {id: 'N64 Toad\'s Turnpike'},
+    {id: 'GCN Dry Dry Desert'},
+    {id: 'SNES Donut Plains 3'},
+    {id: 'N64 Royal Raceway'},
+    {id: '3DS DK Jungle'},
+    {id: 'DS Wario Stadium'},
+    {id: 'GCN Sherbet Land'},
+    {id: '3DS Music Park'},
+    {id: 'N64 Yoshi Valley'},
+    {id: 'DS Tick-Tock Clock'},
+    {id: '3DS Piranha Plant Slide'},
+    {id: 'Wii Grumble Volcano'},
+    {id: 'N64 Rainbow Road'},
+    {id: 'GCN Yoshi Circuit'},
+    {id: 'Excitebike Arena'},
+    {id: 'Dragon Driftway'},
+    {id: 'Mute City'},
+    {id: 'Wii Wario\'s Gold Mine'},
+    {id: 'SNES Rainbow Road'},
+    {id: 'Ice Ice Outpost'},
+    {id: 'Hyrule Circuit'},
+    {id: 'GCN Baby Park'},
+    {id: 'GBA Cheese Land'},
+    {id: 'Wild Woods'},
+    {id: 'Animal Crossing'},
+    {id: '3DS Neo Bowser City'},
+    {id: 'GBA Ribbon Road'},
+    {id: 'Super Bell Subway'},
+    {id: 'Big Blue'},
+    {id: 'Tour Paris Promenade'},
+    {id: '3DS Toad Circuit'},
+    {id: 'N64 Choco Mountain'},
+    {id: 'Wii Coconut Mall'},
+    {id: 'Tour Tokyo Blur'},
+    {id: 'DS Shroom Ridge'},
+    {id: 'GBA Sky Garden'},
+    {id: 'Ninja Hideaway'},
+    {id: 'Tour New York Minute'},
+    {id: 'SNES Mario Circuit 3'},
+    {id: 'N64 Kalamari Desert'},
+    {id: 'DS Waluigi Pinball'},
+    {id: 'Tour Sydney Sprint'},
+    {id: 'GBA Snow Land'},
+    {id: 'Wii Mushroom Gorge'},
+    {id: 'Sky-High Sundae'},
+    {id: 'Tour London Loop'},
+    {id: 'GBA Boo Lake'},
+    {id: '3DS Rock Rock Mountain'},
+    {id: 'Wii Maple Treeway'},
+    {id: 'Tour Berlin Byways'},
+    {id: 'DS Peach Gardens'},
+    {id: 'Merry Mountain'},
+    {id: '3DS Rainbow Road'},
+    {id: 'Tour Amsterdam Drift'},
+    {id: 'GBA Riverside Park'},
+    {id: 'Wii DK Summit'},
+    {id: 'Yoshi\'s Island'},
+    {id: 'Tour Bangkok Rush'},
+    {id: 'DS Mario Circuit'},
+    {id: 'GCN Waluigi Stadium'},
+    {id: 'Tour Singapore Speedway'},
+    {id: 'Tour Athens Dash'},
+    {id: 'GCN Daisy Cruiser'},
+    {id: 'Wii Moonview Highway'},
+    {id: 'Squeaky Clean Sprint'},
+    {id: 'Tour Los Angeles Laps'},
+    {id: 'GBA Sunset Wilds'},
+    {id: 'Wii Koopa Cape'},
+    {id: 'Tour Vancouver Velocity'},
+    {id: 'Tour Rome Avanti'},
+    {id: 'GCN DK Mountain'},
+    {id: 'Wii Daisy Circuit'},
+    {id: 'Piranha Plant Cove'},
+    {id: 'Tour Madrid Drive'},
+    {id: '3DS Rosalina\'s Ice World'},
+    {id: 'SNES Bowser Castle 3'},
+    {id: 'Wii Rainbow Road"}
 ];
 
 var myPicker = new picker.Picker({
