--- a/picker-shortcodes.html
+++ b/picker-shortcodes.html
@@ -409,7 +409,7 @@ var items = [
     {id: 'Tour Madrid Drive'},
     {id: '3DS Rosalina\'s Ice World'},
     {id: 'SNES Bowser Castle 3'},
-    {id: 'Wii Rainbow Road"}
+    {id: 'Wii Rainbow Road'}
 ];
 
 var myPicker = new picker.Picker({
