Testing Mushroom Cup Images

--- a/picker-shortcodes.html
+++ b/picker-shortcodes.html
@@ -314,10 +314,10 @@ button.disabled:hover {
 'use strict';
 
 var items = [
-    {id: 'Mario Kart Stadium'},
-    {id: 'Water Park'},
-    {id: 'Sweet Sweet Canyon'},
-    {id: 'Thwomp Ruins'},
+    {id: 'Mario Kart Stadium', image: 'https://mario.wiki.gallery/images/0/09/MK8_Mario_Kart_Stadium_Course_Icon.png'},
+    {id: 'Water Park', image: 'https://mario.wiki.gallery/images/4/40/MK8_Water_Park_Course_Icon.png'},
+    {id: 'Sweet Sweet Canyon', image: 'https://www.mariowiki.com/images/a/ad/MK8_Sweet_Sweet_Canyon_Course_Icon.png'},
+    {id: 'Thwomp Ruins', image: 'https://mario.wiki.gallery/images/e/e8/MK8_Thwomp_Ruins_Course_Icon.png'},
     {id: 'Mario Circuit'},
     {id: 'Toad Harbor'},
     {id: 'Twisted Mansion'},
