Added all images, storage key, batch size

--- a/picker-shortcodes.html
+++ b/picker-shortcodes.html
@@ -318,102 +318,107 @@ var items = [
     {id: 'Water Park', image: 'https://mario.wiki.gallery/images/4/40/MK8_Water_Park_Course_Icon.png'},
     {id: 'Sweet Sweet Canyon', image: 'https://www.mariowiki.com/images/a/ad/MK8_Sweet_Sweet_Canyon_Course_Icon.png'},
     {id: 'Thwomp Ruins', image: 'https://mario.wiki.gallery/images/e/e8/MK8_Thwomp_Ruins_Course_Icon.png'},
-    {id: 'Mario Circuit'},
-    {id: 'Toad Harbor'},
-    {id: 'Twisted Mansion'},
-    {id: 'Shy Guy Falls'},
-    {id: 'Sunshine Airport'},
-    {id: 'Dolphin Shoals'},
-    {id: 'Electrodrome'},
-    {id: 'Mount Wario'},
-    {id: 'Cloudtop Cruise'},
-    {id: 'Bone-Dry Dunes'},
-    {id: 'Bowser\'s Castle'},
-    {id: 'Rainbow Road'},
-    {id: 'Wii Moo Moo Meadows'},
-    {id: 'GBA Mario Circuit'},
-    {id: 'DS Cheep Cheep Beach'},
-    {id: 'N64 Toad\'s Turnpike'},
-    {id: 'GCN Dry Dry Desert'},
-    {id: 'SNES Donut Plains 3'},
-    {id: 'N64 Royal Raceway'},
-    {id: '3DS DK Jungle'},
-    {id: 'DS Wario Stadium'},
-    {id: 'GCN Sherbet Land'},
-    {id: '3DS Music Park'},
-    {id: 'N64 Yoshi Valley'},
-    {id: 'DS Tick-Tock Clock'},
-    {id: '3DS Piranha Plant Slide'},
-    {id: 'Wii Grumble Volcano'},
-    {id: 'N64 Rainbow Road'},
-    {id: 'GCN Yoshi Circuit'},
-    {id: 'Excitebike Arena'},
-    {id: 'Dragon Driftway'},
-    {id: 'Mute City'},
-    {id: 'Wii Wario\'s Gold Mine'},
-    {id: 'SNES Rainbow Road'},
-    {id: 'Ice Ice Outpost'},
-    {id: 'Hyrule Circuit'},
-    {id: 'GCN Baby Park'},
-    {id: 'GBA Cheese Land'},
-    {id: 'Wild Woods'},
-    {id: 'Animal Crossing'},
-    {id: '3DS Neo Bowser City'},
-    {id: 'GBA Ribbon Road'},
-    {id: 'Super Bell Subway'},
-    {id: 'Big Blue'},
-    {id: 'Tour Paris Promenade'},
-    {id: '3DS Toad Circuit'},
-    {id: 'N64 Choco Mountain'},
-    {id: 'Wii Coconut Mall'},
-    {id: 'Tour Tokyo Blur'},
-    {id: 'DS Shroom Ridge'},
-    {id: 'GBA Sky Garden'},
-    {id: 'Ninja Hideaway'},
-    {id: 'Tour New York Minute'},
-    {id: 'SNES Mario Circuit 3'},
-    {id: 'N64 Kalamari Desert'},
-    {id: 'DS Waluigi Pinball'},
-    {id: 'Tour Sydney Sprint'},
-    {id: 'GBA Snow Land'},
-    {id: 'Wii Mushroom Gorge'},
-    {id: 'Sky-High Sundae'},
-    {id: 'Tour London Loop'},
-    {id: 'GBA Boo Lake'},
-    {id: '3DS Rock Rock Mountain'},
-    {id: 'Wii Maple Treeway'},
-    {id: 'Tour Berlin Byways'},
-    {id: 'DS Peach Gardens'},
-    {id: 'Merry Mountain'},
-    {id: '3DS Rainbow Road'},
-    {id: 'Tour Amsterdam Drift'},
-    {id: 'GBA Riverside Park'},
-    {id: 'Wii DK Summit'},
-    {id: 'Yoshi\'s Island'},
-    {id: 'Tour Bangkok Rush'},
-    {id: 'DS Mario Circuit'},
-    {id: 'GCN Waluigi Stadium'},
-    {id: 'Tour Singapore Speedway'},
-    {id: 'Tour Athens Dash'},
-    {id: 'GCN Daisy Cruiser'},
-    {id: 'Wii Moonview Highway'},
-    {id: 'Squeaky Clean Sprint'},
-    {id: 'Tour Los Angeles Laps'},
-    {id: 'GBA Sunset Wilds'},
-    {id: 'Wii Koopa Cape'},
-    {id: 'Tour Vancouver Velocity'},
-    {id: 'Tour Rome Avanti'},
-    {id: 'GCN DK Mountain'},
-    {id: 'Wii Daisy Circuit'},
-    {id: 'Piranha Plant Cove'},
-    {id: 'Tour Madrid Drive'},
-    {id: '3DS Rosalina\'s Ice World'},
-    {id: 'SNES Bowser Castle 3'},
-    {id: 'Wii Rainbow Road'}
+    {id: 'Mario Circuit', image: 'https://www.mariowiki.com/images/2/28/MK8_Mario_Circuit_Course_Icon.png'},
+    {id: 'Toad Harbor', image: 'https://mario.wiki.gallery/images/2/2a/MK8_Toad_Harbor_Course_Icon.png'},
+    {id: 'Twisted Mansion', image: 'https://mario.wiki.gallery/images/6/68/MK8_Twisted_Mansion_Course_Icon.png'},
+    {id: 'Shy Guy Falls', image: 'https://www.mariowiki.com/images/2/2a/MK8_Shy_Guy_Falls_Course_Icon.png'},
+    {id: 'Sunshine Airport', image: 'https://mario.wiki.gallery/images/9/99/MK8_Sunshine_Airport_Course_Icon.png'},
+    {id: 'Dolphin Shoals', image: 'https://www.mariowiki.com/images/f/fc/MK8_Dolphin_Shoals_Course_Icon.png'},
+    {id: 'Electrodrome', image: 'https://www.mariowiki.com/images/1/14/MK8_Electrodrome_Course_Icon.png'},
+    {id: 'Mount Wario', image: 'https://mario.wiki.gallery/images/3/38/MK8_Mount_Wario_Course_Icon.png'},
+    {id: 'Cloudtop Cruise', image: 'https://mario.wiki.gallery/images/8/81/MK8_Cloudtop_Cruise_Course_Icon.png'},
+    {id: 'Bone-Dry Dunes', image: 'https://www.mariowiki.com/images/d/d3/MK8_Bone-Dry_Dunes_Course_Icon.png'},
+    {id: 'Bowser\'s Castle', image: 'https://www.mariowiki.com/images/2/2b/MK8_Bowser%27s_Castle_Course_Icon.png'},
+    {id: 'Rainbow Road', image: 'https://www.mariowiki.com/images/7/77/MK8_Rainbow_Road_Course_Icon.png'},
+    {id: 'Wii Moo Moo Meadows', image: 'https://www.mariowiki.com/images/9/97/MK8_Wii_Moo_Moo_Meadows_Course_Icon.png'},
+    {id: 'GBA Mario Circuit', image: 'https://www.mariowiki.com/images/f/f7/MK8_GBA_Mario_Circuit_Course_Icon.png'},
+    {id: 'DS Cheep Cheep Beach', image: 'https://www.mariowiki.com/images/9/9e/MK8_DS_Cheep_Cheep_Beach_Course_Icon.png'},
+    {id: 'N64 Toad\'s Turnpike', image: 'https://mario.wiki.gallery/images/5/55/MK8_N64_Toad%27s_Turnpike_Course_Icon.png'},
+    {id: 'GCN Dry Dry Desert', image: 'https://mario.wiki.gallery/images/6/64/MK8_GCN_Dry_Dry_Desert_Course_Icon.png'},
+    {id: 'SNES Donut Plains 3', image: 'https://mario.wiki.gallery/images/b/b1/MK8_SNES_Donut_Plains_3_Course_Icon.png'},
+    {id: 'N64 Royal Raceway', image: 'https://mario.wiki.gallery/images/8/8a/MK8_N64_Royal_Raceway_Course_Icon.png'},
+    {id: '3DS DK Jungle', image: 'https://mario.wiki.gallery/images/3/35/MK8_3DS_DK_Jungle_Course_Icon.png'},
+    {id: 'DS Wario Stadium', image: 'https://www.mariowiki.com/images/1/1a/MK8_DS_Wario_Stadium_Course_Icon.png'},
+    {id: 'GCN Sherbet Land', image: 'https://www.mariowiki.com/images/3/3f/MK8_GCN_Sherbet_Land_Course_Icon.png'},
+    {id: '3DS Music Park', image: 'https://www.mariowiki.com/images/9/94/MK8_3DS_Music_Park_Course_Icon.png'},
+    {id: 'N64 Yoshi Valley', image: 'https://www.mariowiki.com/images/a/a4/MK8_N64_Yoshi_Valley_Course_Icon.png'},
+    {id: 'DS Tick-Tock Clock', image: 'https://mario.wiki.gallery/images/0/0b/MK8_DS_Tick-Tock_Clock_Course_Icon.png'},
+    {id: '3DS Piranha Plant Slide', image: 'https://mario.wiki.gallery/images/d/d1/MK8_3DS_Piranha_Plant_Slide_Course_Icon.png'},
+    {id: 'Wii Grumble Volcano', image: 'https://www.mariowiki.com/images/b/b2/MK8_Wii_Grumble_Volcano_Course_Icon.png'},
+    {id: 'N64 Rainbow Road', image: 'https://www.mariowiki.com/images/b/b9/MK8_N64_Rainbow_Road_Course_Icon.png'},
+    {id: 'GCN Yoshi Circuit', image: 'https://www.mariowiki.com/images/9/94/MK8_GCN_Yoshi_Circuit_Course_Icon.png'},
+    {id: 'Excitebike Arena', image: 'https://www.mariowiki.com/images/5/57/MK8_Excitebike_Arena_Course_Icon.png'},
+    {id: 'Dragon Driftway', image: 'https://www.mariowiki.com/images/b/bb/MK8_Dragon_Driftway_Course_Icon.png'},
+    {id: 'Mute City', image: 'https://mario.wiki.gallery/images/f/fa/MK8_Mute_City_Course_Icon.png'},
+    {id: 'Wii Wario\'s Gold Mine', image: 'https://www.mariowiki.com/images/9/94/MK8_Wii_Wario%27s_Gold_Mine_Course_Icon.png'},
+    {id: 'SNES Rainbow Road', image: 'https://www.mariowiki.com/images/0/05/MK8_SNES_Rainbow_Road_Course_Icon.png'},
+    {id: 'Ice Ice Outpost', image: 'https://www.mariowiki.com/images/c/c4/MK8_Ice_Ice_Outpost_Course_Icon.png'},
+    {id: 'Hyrule Circuit', image: 'https://mario.wiki.gallery/images/5/5e/MK8_Hyrule_Circuit_Course_Icon.png'},
+    {id: 'GCN Baby Park', image: 'https://www.mariowiki.com/images/3/34/MK8_GCN_Baby_Park_Course_Icon.png'},
+    {id: 'GBA Cheese Land', image: 'https://www.mariowiki.com/images/1/15/MK8_GBA_Cheese_Land_Course_Icon.png'},
+    {id: 'Wild Woods', image: 'https://mario.wiki.gallery/images/e/e4/MK8_Wild_Woods_Course_Icon.png'},
+    {id: 'Animal Crossing', image: 'https://mario.wiki.gallery/images/1/15/MK8_Animal_Crossing_Course_Icon.png'},
+    {id: '3DS Neo Bowser City', image: 'https://www.mariowiki.com/images/b/b0/MK8_3DS_Neo_Bowser_City_Course_Icon.png'},
+    {id: 'GBA Ribbon Road', image: 'https://mario.wiki.gallery/images/e/e2/MK8_GBA_Ribbon_Road_Course_Icon.png'},
+    {id: 'Super Bell Subway', image: 'https://mario.wiki.gallery/images/7/7e/MK8_Super_Bell_Subway_Course_Icon.png'},
+    {id: 'Big Blue', image: 'https://mario.wiki.gallery/images/0/06/MK8_Big_Blue_Course_Icon.png'},
+    {id: 'Tour Paris Promenade', image: 'https://www.mariowiki.com/images/b/bb/MK8D_Tour_Paris_Promenade_Course_Icon.png'},
+    {id: '3DS Toad Circuit', image: 'https://www.mariowiki.com/images/3/3b/MK8D_3DS_Toad_Circuit_Course_Icon.png'},
+    {id: 'N64 Choco Mountain', image: 'https://www.mariowiki.com/images/7/74/MK8D_N64_Choco_Mountain_Course_Icon.png'},
+    {id: 'Wii Coconut Mall', image: 'https://www.mariowiki.com/images/9/98/MK8D_Wii_Coconut_Mall_Course_Icon.png'},
+    {id: 'Tour Tokyo Blur', image: 'https://www.mariowiki.com/images/8/81/MK8D_Tour_Tokyo_Blur_Course_Icon.png'},
+    {id: 'DS Shroom Ridge', image: 'https://www.mariowiki.com/images/7/7e/MK8D_DS_Shroom_Ridge_Course_Icon.png'},
+    {id: 'GBA Sky Garden', image: 'https://www.mariowiki.com/images/0/09/MK8D_GBA_Sky_Garden_Course_Icon.png'},
+    {id: 'Ninja Hideaway', image: 'https://www.mariowiki.com/images/b/b1/MK8D_Ninja_Hideaway_Course_Icon.png'},
+    {id: 'Tour New York Minute', image: 'https://mario.wiki.gallery/images/d/d7/MK8D_Tour_New_York_Minute_Course_Icon.png'},
+    {id: 'SNES Mario Circuit 3', image: 'https://mario.wiki.gallery/images/e/e4/MK8D_SNES_Mario_Circuit_3_Course_Icon.png'},
+    {id: 'N64 Kalamari Desert', image: 'https://www.mariowiki.com/images/3/3e/MK8D_N64_Kalimari_Desert_Course_Icon.png'},
+    {id: 'DS Waluigi Pinball', image: 'https://www.mariowiki.com/images/b/b6/MK8D_DS_Waluigi_Pinball_Course_Icon.png'},
+    {id: 'Tour Sydney Sprint', image: 'https://www.mariowiki.com/images/d/d4/MK8D_Tour_Sydney_Sprint_Course_Icon.png'},
+    {id: 'GBA Snow Land', image: 'https://www.mariowiki.com/images/b/bc/MK8D_GBA_Snow_Land_Course_Icon.png'},
+    {id: 'Wii Mushroom Gorge', image: 'https://mario.wiki.gallery/images/f/fb/MK8D_Wii_Mushroom_Gorge_Course_Icon.png'},
+    {id: 'Sky-High Sundae', image: 'https://www.mariowiki.com/images/d/d0/MK8D_Sky-High_Sundae_Course_Icon.png'},
+    {id: 'Tour London Loop', image: 'https://mario.wiki.gallery/images/2/24/MK8D_Tour_London_Loop_Course_Icon.png'},
+    {id: 'GBA Boo Lake', image: 'https://www.mariowiki.com/images/7/71/MK8D_GBA_Boo_Lake_Course_Icon.png'},
+    {id: '3DS Rock Rock Mountain', image: 'https://mario.wiki.gallery/images/e/ee/MK8D_3DS_Rock_Rock_Mountain_Course_Icon.png'},
+    {id: 'Wii Maple Treeway', image: 'https://www.mariowiki.com/images/c/c9/MK8D_Wii_Maple_Treeway_Course_Icon.png'},
+    {id: 'Tour Berlin Byways', image: 'https://mario.wiki.gallery/images/7/73/MK8D_Tour_Berlin_Byways_Course_Icon.png'},
+    {id: 'DS Peach Gardens', image: 'https://mario.wiki.gallery/images/0/0b/MK8D_DS_Peach_Gardens_Course_Icon.png'},
+    {id: 'Merry Mountain', image: 'https://mario.wiki.gallery/images/5/56/MK8D_Merry_Mountain_Course_Icon.png'},
+    {id: '3DS Rainbow Road', image: 'https://www.mariowiki.com/images/9/9f/MK8D_3DS_Rainbow_Road_Course_Icon.png'},
+    {id: 'Tour Amsterdam Drift', image: 'https://www.mariowiki.com/images/c/c1/MK8D_Tour_Amsterdam_Drift_Course_Icon.png'},
+    {id: 'GBA Riverside Park', image: 'https://mario.wiki.gallery/images/5/5d/MK8D_GBA_Riverside_Park_Course_Icon.png'},
+    {id: 'Wii DK Summit', image: 'https://mario.wiki.gallery/images/0/01/MK8D_Wii_DK_Summit_Course_Icon.png'},
+    {id: 'Yoshi\'s Island', image: 'https://www.mariowiki.com/images/2/23/MK8D_Yoshi%27s_Island_Course_Icon.png'},
+    {id: 'Tour Bangkok Rush', image: 'https://www.mariowiki.com/images/f/f2/MK8D_Tour_Bangkok_Rush_Course_Icon.png'},
+    {id: 'DS Mario Circuit', image: 'https://mario.wiki.gallery/images/2/2c/MK8D_DS_Mario_Circuit_Course_Icon.png'},
+    {id: 'GCN Waluigi Stadium', image: 'https://mario.wiki.gallery/images/f/f6/MK8D_GCN_Waluigi_Stadium_Course_Icon.png'},
+    {id: 'Tour Singapore Speedway', image: 'https://mario.wiki.gallery/images/f/f5/MK8D_Tour_Singapore_Speedway_Course_Icon.png'},
+    {id: 'Tour Athens Dash', image: 'https://www.mariowiki.com/images/0/0a/MK8D_Tour_Athens_Dash_Course_Icon.png'},
+    {id: 'GCN Daisy Cruiser', image: 'https://www.mariowiki.com/images/9/98/MK8D_GCN_Daisy_Cruiser_Course_Icon.png'},
+    {id: 'Wii Moonview Highway', image: 'https://www.mariowiki.com/images/7/7c/MK8D_Wii_Moonview_Highway_Course_Icon.png'},
+    {id: 'Squeaky Clean Sprint', image: 'https://www.mariowiki.com/images/a/af/MK8D_Squeaky_Clean_Sprint_Course_Icon.png'},
+    {id: 'Tour Los Angeles Laps', image: 'https://www.mariowiki.com/images/2/23/MK8D_Tour_Los_Angeles_Laps_Course_Icon.png'},
+    {id: 'GBA Sunset Wilds', image: 'https://www.mariowiki.com/images/1/11/MK8D_GBA_Sunset_Wilds_Course_Icon.png'},
+    {id: 'Wii Koopa Cape', image: 'https://mario.wiki.gallery/images/5/5a/MK8D_Wii_Koopa_Cape_Course_Icon.png'},
+    {id: 'Tour Vancouver Velocity', image: 'https://mario.wiki.gallery/images/6/60/MK8D_Tour_Vancouver_Velocity_Course_Icon.png'},
+    {id: 'Tour Rome Avanti', image: 'https://www.mariowiki.com/images/c/c4/MK8D_Tour_Rome_Avanti_Course_Icon.png'},
+    {id: 'GCN DK Mountain', image: 'https://www.mariowiki.com/images/2/28/MK8D_GCN_DK_Mountain_Course_Icon.png'},
+    {id: 'Wii Daisy Circuit', image: 'https://www.mariowiki.com/images/c/cf/MK8D_Wii_Daisy_Circuit_Course_Icon.png'},
+    {id: 'Piranha Plant Cove', image: 'https://www.mariowiki.com/images/c/c3/MK8D_Piranha_Plant_Cove_Course_Icon.png'},
+    {id: 'Tour Madrid Drive', image: 'https://www.mariowiki.com/images/4/4f/MK8D_Tour_Madrid_Drive_Course_Icon.png'},
+    {id: '3DS Rosalina\'s Ice World', image: 'https://www.mariowiki.com/images/1/1d/MK8D_3DS_Rosalina%27s_Ice_World_Course_Icon.png'},
+    {id: 'SNES Bowser Castle 3', image: 'https://www.mariowiki.com/images/1/1e/MK8D_SNES_Bowser_Castle_3_Course_Icon.png'},
+    {id: 'Wii Rainbow Road', image: 'https://www.mariowiki.com/images/0/0c/MK8D_Wii_Rainbow_Road_Course_Icon.png'}
 ];
 
 var myPicker = new picker.Picker({
-    items: items
+    items: items,
+    localStorageKey: 'mk8dx-tracks',
+    defaultSettings: {
+        minBatchSize: 3,
+        maxBatchSize: 3
+    }
 });
 
 var pickerUI = new PickerUI(myPicker, {
