--- a/picker-shortcodes.html
+++ b/picker-shortcodes.html
@@ -415,6 +415,7 @@ var items = [
 var myPicker = new picker.Picker({
     items: items,
     localStorageKey: 'mk8dx-tracks',
+    shortcodeLength: 3,
     defaultSettings: {
         minBatchSize: 3,
         maxBatchSize: 3
